# bookshelf

./: Cargo.toml  README.md
crates/bookshelf-cli/: Cargo.toml
crates/bookshelf-cli/src/: main.rs
crates/bookshelf-core/: Cargo.toml
crates/bookshelf-core/migrations/: 0001_initial.sql  0002_want_list.sql  0003_followed_authors.sql
crates/bookshelf-core/src/: db.rs  enrich.rs  epub.rs  follow.rs  fuzzy.rs  grab.rs  lib.rs  scan.rs  series.rs  want.rs
crates/bookshelf-core/tests/: e2e_grab_dedup.rs  edge_cases.rs  integration_enrich.rs  integration_follow.rs  integration_grab.rs  integration_scan.rs  integration_series.rs  integration_want.rs  qa_grab_integration.rs  qa_source_validation.rs
tests/fixtures/: the_hobbit.epub  the_hobbit_alt.epub
