[package]
name = "bookshelf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bookshelf"
path = "src/main.rs"

[dependencies]
bookshelf-core     = { path = "../bookshelf-core" }
clap               = { version = "4", features = ["derive"] }
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = "0.3"
reqwest            = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
