[package]
name = "bookshelf-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx      = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }
tokio     = { version = "1", features = ["full"] }
reqwest   = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml  = "0.31"
zip        = "0.6"
strsim     = "0.11"
chrono     = { version = "0.4", features = ["serde"] }
anyhow     = "1"
dirs       = "5"
tracing    = "0.1"
walkdir      = "2"
urlencoding  = "2"
csv          = "1"

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
tempfile = "3"
wiremock = "0.5"
